[gd_scene load_steps=3 format=3 uid="uid://comic_transition01"]

[ext_resource type="Script" path="res://scripts/ui/comic_transition.gd" id="1_script"]
[ext_resource type="FontFile" path="res://assets/fonts/AaSiHaSiHaShouXieTi-2.ttf" id="2_font"]

[node name="ComicTransition" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_script")

[node name="ImageContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CurrentImage" type="TextureRect" parent="ImageContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
expand_mode = 1
stretch_mode = 5
modulate = Color(1, 1, 1, 1)

[node name="NextImage" type="TextureRect" parent="ImageContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
expand_mode = 1
stretch_mode = 5
modulate = Color(1, 1, 1, 0)

[node name="NextButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 80
text = "进入下一关"
visible = false
